--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 body {
   margin: 0;
-  padding: 0 3rem 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -11,4 +10,17 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1 {
+  margin-top: 0;
+}
+
+.dark {
+  background-color: grey;
+  color: white;
+}
+
+.wrapper {
+  height: 100vh;
 }
