--- a/src/index.css
+++ b/src/index.css
@@ -17,8 +17,18 @@ h1 {
 }
 
 .dark {
-  background-color: grey;
+  background-color: black;
   color: white;
+}
+
+.medium {
+  background-color: grey;
+  color: #ccc;
+}
+
+.light {
+  background-color: white;
+  color: black;
 }
 
 .wrapper {
