--- a/src/componentes/Navbar/index.css
+++ b/src/componentes/Navbar/index.css
@@ -60,7 +60,7 @@ a{
   .section-caja {
     margin-top: 100px;
     color: #444444;
-    box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
+    box-shadow: 0 0 30px rgb(56 56 56 / 60%);
     margin-left: 10%;
     margin-right: 10%;
     padding: 50px;
